force-app/main/default/objects/Invoice__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CGST</label>
    <type>Checkbox</type>
</CustomField>