force-app/main/default/objects/Invoice__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IGST</label>
    <type>Checkbox</type>
</CustomField>