force-app/main/default/objects/Invoice__c/fields/Lead_name__c.field-meta.xml
<CustomField>
    <fullName>Lead_name__c</fullName>
    <formula>Lead__r.FirstName + &apos; &apos; +Lead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead name</label>
    <type>Text</type>
</CustomField>