force-app/main/default/objects/Invoice__c/fields/Plan_Days__c.field-meta.xml
<CustomField>
    <fullName>Plan_Days__c</fullName>
    <formula>DATEVALUE( Lead__r.Plan_Expiry_Date__c )  -  DATEVALUE(Subscription_Start_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>