force-app/main/default/objects/Invoice__c/fields/PO_Numer__c.field-meta.xml
<CustomField>
    <fullName>PO_Numer__c</fullName>
    <label>PO Numer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>