force-app/main/default/objects/Invoice__c/fields/PRODUCT_CODE__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_CODE__c</fullName>
    <label>PRODUCT CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>