force-app/main/default/objects/Invoice__c/fields/S_O_date__c.field-meta.xml
<CustomField>
    <fullName>S_O_date__c</fullName>
    <label>S.O date</label>
    <type>Date</type>
</CustomField>