force-app/main/default/objects/Invoice__c/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SGST</label>
    <type>Checkbox</type>
</CustomField>