force-app/main/default/objects/Invoice__c/fields/Subscription_plan__c.field-meta.xml
<CustomField>
    <fullName>Subscription_plan__c</fullName>
    <formula>Lead__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription plan</label>
    <type>Text</type>
</CustomField>