force-app/main/default/objects/Invoice__c/fields/Subscription_Plan_Price__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Plan_Price__c</fullName>
    <formula>Lead__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Plan Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>