force-app/main/default/objects/Invoice__c/fields/Subscription_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date_Time__c</fullName>
    <label>Subscription Start Date/Time</label>
    <type>DateTime</type>
</CustomField>