force-app/main/default/objects/Invoice__c/fields/Transaction_No__c.field-meta.xml
<CustomField>
    <fullName>Transaction_No__c</fullName>
    <label>Transaction No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>