force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Due_Date__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>PO_Numer__c</columns>
    <columns>PRODUCT_CODE__c</columns>
    <columns>S_O_date__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Qty__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>